--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -70,8 +70,8 @@ jobs:
       # Not sure why this is necessary either. `scamplers-schema/build.rs` throws a "Permission Denied" error without this
       - name: Change permissions
         run: |
-          chmod u+rx ~/.cargo/bin
-          chmod u+rx ~/.cargo/bin/*
+          chmod u+rx db
+          chmod -R u+rx db/
 
       - name: Lint app
         working-directory: rust
