--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -70,8 +70,8 @@ jobs:
       # Not sure why this is necessary either. `scamplers-schema/build.rs` throws a "Permission Denied" error without this
       - name: Change permissions
         run: |
-          chmod u+rx db
-          chmod -R u+rx db/
+          chmod u+rwx g+rwx o+rwx ~/cargo/bin
+          chmod u+rwx g+rwx o+rwx ~/.cargo/bin/*
 
       - name: Lint app
         working-directory: rust
