--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -70,7 +70,7 @@ jobs:
       # Not sure why this is necessary either. `scamplers-schema/build.rs` throws a "Permission Denied" error without this
       - name: Change permissions
         run: |
-          chmod +rwx ~/cargo/bin
+          chmod +rwx ~/.cargo/bin
           chmod +rwx ~/.cargo/bin/*
 
       - name: Lint app
