make all the CI faster while we're at it

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -6,7 +6,7 @@ on:
       - python/**
 
 jobs:
-  check-python:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -26,10 +26,28 @@ jobs:
         working-directory: python/test-scamplepy
         run: uv run --module pytest
 
+  analyze-types:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+
+      - name: Cache cargo files
+        uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: "rust -> target"
+
+      - name: Install the latest version of uv
+        uses: astral-sh/setup-uv@v6
+
       - name: Analyze types
         working-directory: python/test-scamplepy
         run: uv run --module pyright
 
+  lint-and-format:
+    runs-on: ubuntu-latest
+    steps:
       - name: Lint and format
         uses: astral-sh/ruff-action@v3
         with:
