--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -21,6 +21,8 @@ jobs:
 
       - name: Install the latest version of uv
         uses: astral-sh/setup-uv@v6
+        with:
+          enable-cache: true
 
       - name: Run tests
         working-directory: python/test-scamplepy
@@ -40,6 +42,8 @@ jobs:
 
       - name: Install the latest version of uv
         uses: astral-sh/setup-uv@v6
+        with:
+          enable-cache: true
 
       - name: Analyze types
         working-directory: python/test-scamplepy
