--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -5,7 +5,86 @@ on:
       - rust/**
 
 jobs:
-  check-rust:
+  lint-app:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+
+      - name: Cache cargo files
+        uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: "rust -> target"
+
+      - name: Install diesel
+        run: cargo install diesel_cli --no-default-features --features postgres
+
+      - name: Install clippy
+        run: |
+          rustup component add --toolchain stable-x86_64-unknown-linux-gnu clippy
+
+      - name: Lint app
+        working-directory: rust
+        run: cargo clippy --workspace --exclude scamplers-schema --exclude scamplepy --features app
+
+  lint-scamplepy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+
+      - name: Cache cargo files
+        uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: "rust -> target"
+
+      - name: Install clippy
+        run: |
+          rustup component add --toolchain stable-x86_64-unknown-linux-gnu clippy
+
+      - name: Lint scamplepy
+        working-directory: rust
+        run: cargo clippy --workspace --exclude scamplers-schema --features python
+
+  lint-wasm:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+
+      - name: Cache cargo files
+        uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: "rust -> target"
+
+      # For some reason, the installation of the target, toolchain, and clippy need to happen in the same step as the actual linting :)
+      - name: Lint Wasm
+        working-directory: rust
+        run: |
+          rustup target add wasm32-unknown-unknown
+          rustup toolchain install stable-x86_64-unknown-linux-gnu
+          rustup component add --toolchain stable-x86_64-unknown-linux-gnu clippy
+          cargo clippy --workspace --exclude scamplepy --exclude scamplers-schema --target wasm32-unknown-unknown
+
+  format:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+
+      - name: Cache cargo files
+        uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: "rust -> target"
+
+      - name: Install nightly toolchain
+        run: rustup component add --toolchain nightly-2025-09-26 rustfmt
+
+      - name: Format
+        working-directory: rust
+        run: cargo +nightly-2025-09-26 fmt -- --check
+
+  test:
     runs-on: ubuntu-latest
     env:
       RUSTFLAGS: -Dwarnings --cfg tracing_unstable
@@ -22,35 +101,29 @@ jobs:
       - name: Install diesel
         run: cargo install diesel_cli --no-default-features --features postgres
 
-      - name: Install nightly toolchain
-        run: rustup toolchain install nightly && rustup component add --toolchain nightly rustfmt
-
-      - name: Format
-        working-directory: rust
-        run: cargo +nightly fmt -- --check
-
-      - name: Build
-        working-directory: rust
-        run: |
-          cargo build --workspace --features app
-          cargo build --workspace --features python
-          rustup target add wasm32-unknown-unknown
-          cargo build --workspace --exclude scamplepy --exclude scamplers-schema --target wasm32-unknown-unknown
-
-      - name: Lint
-        working-directory: rust
-        run: |
-          cargo clippy --workspace --exclude scamplers-schema --features app
-          cargo clippy --workspace --exclude scamplers-schema --features python
-          rustup target add wasm32-unknown-unknown
-          cargo clippy --workspace --exclude scamplepy --exclude scamplers-schema --target wasm32-unknown-unknown
-
       - name: Test
         working-directory: rust
         run: ./test.sh
 
+  check-wasm-source:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+
       - name: Compare typescript/scamplers/rust-src to rust/scamplers/src
         run: diff --recursive typescript/scamplers/rust-src rust/scamplers/src
+
+  check-python-typestubs:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+
+      - name: Cache cargo files
+        uses: Swatinem/rust-cache@v2
+        with:
+          workspaces: "rust -> target"
 
       - name: Regenerate Python typestubs and compare to committed typestubs
         working-directory: rust/scamplepy
