--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ updates:
   - package-ecosystem: "cargo"
     directory: "rust"
     schedule:
-      interval: "daily"
+      interval: "weekly"
     groups:
       all-rust-dependencies:
         patterns:
@@ -12,7 +12,7 @@ updates:
   - package-ecosystem: "npm"
     directory: "typescript/scamplers-frontend"
     schedule:
-      interval: "daily"
+      interval: "weekly"
     groups:
       all-typescript-dependencies:
         patterns:
