change certificate settings and update .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -7,9 +7,11 @@ SCAMPLERS_AUTH_MICROSOFT_ENTRA_ID_SECRET=""
 SCAMPLERS_AUTH_MICROSOFT_ENTRA_ID_ISSUER="https://login.microsoftonline.com/<tenant-id>/v2.0"
 SCAMPLERS_AUTH_SECRET="" # Run `npx auth secret` to generate this
 SCAMPLERS_PUBLIC_ADDRESS="" # For dev, set this to "localhost http://localhost"
-SCAMPLERS_TLS_SETTINGS="" # Settings to pass into caddy for TLS
+SCAMPLERS_TLS_SETTINGS="/run/secrets/tls_certificate /run/secrets/tls_key" # Settings to pass into caddy for TLS
 SCAMPLERS_FRONTEND_API_ADDRESS_SERVER="" # For development, set this to "http://scamplers-api:8000"
 SCAMPLERS_FRONTEND_API_ADDRESS_CLIENT="" # For development, set this to "http://localhost"
 SCAMPLERS_FRONTEND_TOKEN="" # A long, randomly generated, crypotgraphically secure string
 SCAMPLERS_SEED_DATA_PATH="seed_data.sample.json"
 SCAMPLERS_SEED_DATA="seed_data.sample.json"
+SCAMPLERS_TLS_CERTIFICATE_PATH="tls-certificate.cert"
+SCAMPLERS_TLS_KEY_PATH="tls-key.key"
