--- a/compose.yaml
+++ b/compose.yaml
@@ -119,7 +119,7 @@ services:
         condition: service_healthy
     secrets:
       - tls_certificate
-      - tls_key_file
+      - tls_key
 volumes:
   db-data:
   logs:
