--- a/rust/uuid/Cargo.toml
+++ b/rust/uuid/Cargo.toml
@@ -12,7 +12,6 @@ serde = { workspace = true }
 diesel = { workspace = true, optional = true }
 valuable = { workspace = true }
 pyo3 = { workspace = true, optional = true }
-pyo3-stub-gen = { workspace = true, optional = true }
 
 [lints]
 workspace = true
@@ -23,4 +22,4 @@ wasm-bindgen = { workspace = true }
 
 [features]
 app = ["diesel"]
-python = ["pyo3", "pyo3-stub-gen"]
+python = ["pyo3"]
