--- a/rust/valid-string/Cargo.toml
+++ b/rust/valid-string/Cargo.toml
@@ -13,7 +13,6 @@ diesel = { workspace = true, optional = true }
 valuable = { workspace = true }
 thiserror = { workspace = true }
 pyo3 = { workspace = true, optional = true }
-pyo3-stub-gen = { workspace = true, optional = true }
 
 [dev-dependencies]
 rstest = { workspace = true}
@@ -26,4 +25,4 @@ wasm-bindgen = { workspace = true }
 
 [features]
 app = ["diesel"]
-python = ["pyo3", "pyo3-stub-gen"]
+python = ["pyo3"]
