make CI less active

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,9 +1,11 @@
 name: Check scamplepy
 on:
-  push:
+  pull_request:
     paths:
       - rust/**
       - python/**
+    branches:
+      - main
 
 jobs:
   test:
