--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,8 +1,10 @@
 name: Check Rust Code
 on:
-  push:
+  pull_request:
     paths:
       - rust/**
+    branches:
+      - main
 
 jobs:
   lint-app:
