--- a/.github/workflows/typescript.yml
+++ b/.github/workflows/typescript.yml
@@ -1,8 +1,10 @@
 name: Check TypeScript Code
 on:
-  push:
+  pull_request:
     paths:
       - typescript/**
+    branches:
+      - main
 
 jobs:
   lint:
