--- a/typescript/scamplers-frontend/package.json
+++ b/typescript/scamplers-frontend/package.json
@@ -20,6 +20,8 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.38.0",
+		"@internationalized/date": "^3.10.0",
+		"@lucide/svelte": "^0.544.0",
 		"@playwright/test": "^1.56.1",
 		"@sveltejs/adapter-node": "^5.4.0",
 		"@sveltejs/kit": "^2.47.3",
@@ -27,7 +29,8 @@
 		"@tailwindcss/vite": "^4.1.15",
 		"@testing-library/jest-dom": "^6.9.1",
 		"@testing-library/svelte": "^5.2.8",
-		"daisyui": "^5.3.7",
+		"bits-ui": "^2.14.0",
+		"clsx": "^2.1.1",
 		"eslint": "^9.38.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.12.5",
@@ -38,7 +41,10 @@
 		"prettier-plugin-tailwindcss": "^0.7.1",
 		"svelte": "^5.41.2",
 		"svelte-check": "^4.3.3",
+		"tailwind-merge": "^3.3.1",
+		"tailwind-variants": "^3.1.1",
 		"tailwindcss": "^4.1.12",
+		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.46.2",
 		"vite": "^7.1.11",
