--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -69,7 +69,7 @@ tracing = { version = "0.1.41", features = ["valuable"] }
 tower = { version = "0.5.2", default-features = false }
 tracing-subscriber = { version = "0.3.20", features = ["json"] }
 argon2 = "0.5.3"
-tower-http = { version = "0.6.6", features = ["trace", "fs"] }
+tower-http = { version = "0.6.6", features = ["trace", "set-header"] }
 rand = "0.9.2"
 reqwest = { version = "0.12.24", features = [ "json" ] }
 url = { version = "2.5.7", features = ["serde"] }
