--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ serde = { version = "1.0.228", features = ["derive"] }
 serde-qs = { version = "0.15.0", features = ["axum"] }
 serde_json = { version = "1.0.145", features = ["float_roundtrip"] }
 strum = { version = "0.27.2", features = ["derive"] }
+syn = { version = "2.0.108", default-features = false, features = ["parsing"] }
 thiserror = "2.0.17"
 tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
 tracing = { version = "0.1.41" }
