--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
   "default-vec",
   "non-empty-string",
   "scamplers-api",
+  "scamplers-jsonschema",
   "scamplers-models",
   "scamplers-models/macro-attributes",
   "scamplers-schema",
@@ -45,8 +46,8 @@ reqwest = { version = "0.12.24", features = ["json"] }
 rstest = { version = "0.26.1", default-features = false }
 schemars = { version = "1.0.4", features = ["jiff02", "url2", "uuid1"] }
 serde = { version = "1.0.228", features = ["derive"] }
-serde-qs = { version = "0.15.0", features = ["axum"] }
 serde_json = { version = "1.0.145", features = ["float_roundtrip"] }
+serde_qs = { version = "0.15.0", features = ["axum"] }
 strum = { version = "0.27.2", features = ["derive"] }
 syn = { version = "2.0.108", default-features = false, features = ["parsing"] }
 thiserror = "2.0.17"
