--- a/scamplers-api/Cargo.toml
+++ b/scamplers-api/Cargo.toml
@@ -25,6 +25,7 @@ scamplers-models = { version = "0.1.0", path = "../scamplers-models", features =
 scamplers-schema = { version = "0.1.0", path = "../scamplers-schema" }
 serde.workspace = true
 serde_json.workspace = true
+serde_qs.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
