--- a/compose.yaml
+++ b/compose.yaml
@@ -28,7 +28,6 @@ services:
       target: final
     environment:
       PORT: &api_port 8000
-      API_PATH: &api_path /api
       DB_HOST: postgres
       DB_PORT: *db_port
     expose:
@@ -42,9 +41,9 @@ services:
         uid: "10001"
       - source: db_name
         uid: "10001"
-      - source: seed_data
+      - source: initial_data
         uid: "10001"
-      - source: frontend_token
+      - source: ui_token
         uid: "10001"
     volumes:
       - logs:/logs
@@ -59,12 +58,11 @@ services:
       start_interval: 1s
       timeout: 5s
       retries: 10
-  scamplers-frontend:
+  scamplers-ui:
     build:
       context: typescript
       args:
-        API_ADDRESS_SERVER: ${SCAMPLERS_FRONTEND_API_ADDRESS_SERVER}
-        API_ADDRESS_CLIENT: ${SCAMPLERS_FRONTEND_API_ADDRESS_CLIENT}
+        API_ADDRESS_SERVER: ${SCAMPLERS_UI_API_ADDRESS_SERVER}
         API_PATH: *api_path
         NODE_ENV: production
       target: final
