--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,12 +2,12 @@ name: Check Rust Code
 on:
   pull_request:
     paths:
-      - rust/**
+      - "**/*.rs"
     branches:
       - main
 
 jobs:
-  lint-app:
+  lint-workspace:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
@@ -27,27 +27,7 @@ jobs:
 
       - name: Lint app
         working-directory: rust
-        run: cargo clippy --workspace --exclude scamplers-schema --exclude scamplepy --features app
-
-  lint-wasm:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
-
-      - name: Cache cargo files
-        uses: Swatinem/rust-cache@v2
-        with:
-          workspaces: "rust -> target"
-
-      # For some reason, the installation of the target, toolchain, and clippy need to happen in the same step as the actual linting :)
-      - name: Lint Wasm
-        working-directory: rust
-        run: |
-          rustup target add wasm32-unknown-unknown
-          rustup toolchain install stable-x86_64-unknown-linux-gnu
-          rustup component add --toolchain stable-x86_64-unknown-linux-gnu clippy
-          cargo clippy --workspace --exclude scamplepy --exclude scamplers-schema --target wasm32-unknown-unknown
+        run: cargo clippy --workspace
 
   format:
     runs-on: ubuntu-latest
@@ -85,14 +65,4 @@ jobs:
         run: cargo install diesel_cli --no-default-features --features postgres
 
       - name: Test
-        working-directory: rust
-        run: ./test.sh
-
-  check-wasm-source:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
-
-      - name: Compare typescript/scamplers/rust-src to rust/scamplers/src
-        run: diff --recursive typescript/scamplers/rust-src rust/scamplers/src
+        run: cargo test
