--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,6 +31,12 @@ repos:
         language: script
         pass_filenames: false
 
+      - id: lint_scamplers-api
+        name: Lint scamplers-api
+        entry: ./scripts/pre-commit/lint_scamplers-api.sh
+        language: script
+        pass_filenames: false
+
   - repo: https://github.com/sqlfluff/sqlfluff
     rev: 3.4.2
     hooks:
