--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:18rc1-alpine
+    image: postgres:18-alpine
     restart: always
     user: root
     secrets:
@@ -8,7 +8,7 @@ services:
       - db_root_password
       - db_name
     volumes:
-      - db-data:/var/lib/postgresql/data
+      - db-data:/var/lib/postgresql/18/docker
     environment:
       - POSTGRES_USER_FILE=/run/secrets/db_root_user
       - POSTGRES_PASSWORD_FILE=/run/secrets/db_root_password
