--- a/scamplers-ui/package.json
+++ b/scamplers-ui/package.json
@@ -4,25 +4,28 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "typedefs": "cargo run --package scamplers-jsonschema -- --output-dir ../json-schema && deno run --allow-all npm:json-schema-to-typescript --input ../json-schema/ --output src/lib/scamplers-models/",
-    "dev": "deno task typedefs && vite dev",
-    "build": "deno task typedefs && vite build",
+    "dev": "vite dev",
+    "build": "vite build",
     "preview": "vite preview",
     "prepare": "svelte-kit sync || echo ''",
-    "check": "svelte-kit sync && deno task typedefs && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && deno task typedefs && svelte-check --tsconfig ./tsconfig.json --watch"
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
-  "dependencies": {
-    "@auth/core": "^0.41.0",
-    "@auth/sveltekit": "^1.11.0"
+  "peerDependencies": {
+    "typescript": "^5"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^6.1.0",
     "@sveltejs/kit": "^2.43.2",
     "@sveltejs/vite-plugin-svelte": "^6.2.0",
+    "@types/bun": "latest",
     "svelte": "^5.39.5",
+    "svelte-adapter-bun": "^1.0.1",
     "svelte-check": "^4.3.2",
     "typescript": "^5.9.2",
     "vite": "^7.1.7"
+  },
+  "dependencies": {
+    "better-auth": "1.4.0-beta.14",
+    "better-sqlite3": "^12.4.1"
   }
 }
