--- a/scamplers-ui/package.json
+++ b/scamplers-ui/package.json
@@ -25,7 +25,6 @@
     "vite": "^7.1.7"
   },
   "dependencies": {
-    "better-auth": "1.4.0-beta.14",
-    "better-sqlite3": "^12.4.1"
+    "better-auth": "1.4.0-beta.15"
   }
 }
