--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ tracing-appender = "0.2.3"
 tracing-subscriber = { version = "0.3.20", features = ["json"] }
 url = { version = "2.5.7", features = ["serde"] }
 uuid = { version = "1.18.1", features = ["serde", "v7"] }
+base16ct = {version = "0.3.0"}
 
 [workspace.lints.clippy]
 missing_errors_doc = "allow"
