--- a/scamplers-api/Cargo.toml
+++ b/scamplers-api/Cargo.toml
@@ -8,6 +8,7 @@ anyhow.workspace = true
 argon2.workspace = true
 axum.workspace = true
 axum-extra.workspace = true
+base16ct.workspace = true
 camino.workspace = true
 clap.workspace = true
 deadpool-diesel.workspace = true
