--- a/.env.sample
+++ b/.env.sample
@@ -1,17 +1,29 @@
-SCAMPLERS_DB_ROOT_USER=""
+# This .env file can be used with `scripts/dev/start-api.sh` and `scripts/dev/start-ui.sh` to start the application
+# without containerization.
+
+# Password for the root database user
 SCAMPLERS_DB_ROOT_PASSWORD=""
-SCAMPLERS_DB_LOGIN_USER_PASSWORD=""
-SCAMPLERS_DB_NAME=""
-SCAMPLERS_AUTH_MICROSOFT_ENTRA_ID_ID=""
-SCAMPLERS_AUTH_MICROSOFT_ENTRA_ID_SECRET=""
-SCAMPLERS_AUTH_MICROSOFT_ENTRA_ID_ISSUER="https://login.microsoftonline.com/<tenant-id>/v2.0"
-SCAMPLERS_AUTH_SECRET="" # Run `npx auth secret` to generate this
-SCAMPLERS_PUBLIC_ADDRESS="" # For dev, set this to "localhost http://localhost"
-SCAMPLERS_TLS_SETTINGS="/run/secrets/tls_certificate /run/secrets/tls_key" # Settings to pass into caddy for TLS
-SCAMPLERS_FRONTEND_API_ADDRESS_SERVER="" # For development, set this to "http://scamplers-api:8000"
-SCAMPLERS_FRONTEND_API_ADDRESS_CLIENT="" # For development, set this to "http://localhost"
-SCAMPLERS_FRONTEND_TOKEN="" # A long, randomly generated, crypotgraphically secure string
-SCAMPLERS_SEED_DATA_PATH="seed_data.sample.json"
-SCAMPLERS_SEED_DATA="seed_data.sample.json"
-SCAMPLERS_TLS_CERTIFICATE_PATH="tls-certificate.cert"
-SCAMPLERS_TLS_KEY_PATH="tls-key.key"
+
+# The password scamplers-api uses to connect to the database (as the user "scamplers_api")
+SCAMPLERS_API_DB_PASSWORD=""
+
+# Where scamplers-api will serve. Default values shown
+SCAMPLERS_API_HOST="localhost"
+SCAMPLERS_API_PORT=8000
+
+# For running locally, scamplers-ui needs to know scamplers-api's URL. This is the same as the values above
+SCAMPLERS_API_URL="http://localhost:8000/api"
+
+# The API key prefix is important to query the database for API keys. Default value shown
+SCAMPLERS_API_KEY_PREFIX_LENGTH=8
+
+# OpenID/OAuth configuration
+SCAMPLERS_MICROSOFT_ENTRA_CLIENT_ID=""
+SCAMPLERS_MICROSOFT_ENTRA_CLIENT_SECRET=""
+SCAMPLERS_MICROSOFT_ENTRA_TENANT=""
+
+# The password scamplers-ui uses to connect to the database (as the user "scamplers_ui")
+SCAMPLERS_UI_DB_PASSWORD=""
+
+# Path from which to read initial data that scamplers-api will insert into db
+SCAMPLERS_INITIAL_DATA_PATH="initial-data.sample.json"
