--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,7 +7,7 @@ on:
       - main
 
 jobs:
-  lint-workspace:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
@@ -20,10 +20,6 @@ jobs:
 
       - name: Install diesel
         run: cargo install diesel_cli --no-default-features --features postgres
-
-      - name: Install clippy
-        run: |
-          rustup component add --toolchain stable-x86_64-unknown-linux-gnu clippy
 
       - name: Lint
         run: cargo clippy --workspace
@@ -40,10 +36,10 @@ jobs:
           workspaces: "rust -> target"
 
       - name: Install nightly toolchain
-        run: rustup component add --toolchain nightly-2025-09-26 rustfmt
+        run: rustup component add --toolchain nightly-2025-11-05 rustfmt
 
       - name: Format
-        run: cargo +nightly-2025-09-26 fmt -- --check
+        run: cargo +nightly-2025-11-05 fmt -- --check
 
   test:
     runs-on: ubuntu-latest
@@ -63,4 +59,4 @@ jobs:
         run: cargo install diesel_cli --no-default-features --features postgres
 
       - name: Test
-        run: cargo test
+        run: cargo test --workspace --all-features
