--- a/compose.yaml
+++ b/compose.yaml
@@ -1,19 +1,19 @@
+# Base compose file. Merge this with one of compose.dev.yaml of compose.prod.yaml to produce a running application
 services:
   postgres:
     image: postgres:18-alpine
     restart: always
-    user: root
+    user: &db_root_user postgres
     secrets:
-      - db_root_user
       - db_root_password
       - db_name
     volumes:
       - db-data:/var/lib/postgresql/18/docker
     environment:
-      - POSTGRES_USER_FILE=/run/secrets/db_root_user
-      - POSTGRES_PASSWORD_FILE=/run/secrets/db_root_password
-      - POSTGRES_DB_FILE=/run/secrets/db_name
-      - POSTGRES_HOST_AUTH_METHOD=scram-sha-256
+      POSTGRES_USER: *db_root_user
+      POSTGRES_PASSWORD_FILE: /run/secrets/db_root_password
+      POSTGRES_DB_FILE: /run/secrets/db_name
+      POSTGRES_HOST_AUTH_METHOD: scram-sha-256
     expose:
       - &db_port 5432
     healthcheck:
@@ -22,10 +22,6 @@ services:
       timeout: 5s
       retries: 10
   scamplers-api:
-    build:
-      context: .
-      dockerfile: rust/Dockerfile
-      target: final
     environment:
       PORT: &api_port 8000
       DB_HOST: postgres
@@ -37,13 +33,11 @@ services:
         uid: "10001"
       - source: db_root_password
         uid: "10001"
-      - source: db_login_user_password
+      - source: api_db_password
         uid: "10001"
       - source: db_name
         uid: "10001"
       - source: initial_data
-        uid: "10001"
-      - source: ui_token
         uid: "10001"
     volumes:
       - logs:/logs
@@ -51,29 +45,21 @@ services:
       postgres:
         condition: service_healthy
     healthcheck:
-      # TODO: interpolate api_port
-      test: curl http://localhost:8000/health || exit 1
+      test: curl http://localhost:8000/api/health || exit 1
       interval: 5s
       start_period: 10s
       start_interval: 1s
       timeout: 5s
       retries: 10
   scamplers-ui:
-    build:
-      context: typescript
-      args:
-        API_ADDRESS_SERVER: ${SCAMPLERS_UI_API_ADDRESS_SERVER}
-        API_PATH: *api_path
-        NODE_ENV: production
-      target: final
     environment:
-      IN_DOCKER: "true"
-      PORT: &frontend_port 8000
+      BASE_URL: ${SCAMPLERS_PUBLIC_URL}
+      IN_DOCKER: true
+      PORT: &ui_port 8000
     depends_on:
       scamplers-api:
         condition: service_healthy
     healthcheck:
-      # TODO: interpolate frontend_port
       test: curl http://localhost:8000/health || exit 1
       interval: 5s
       start_period: 5s
@@ -81,26 +67,22 @@ services:
       timeout: 1s
       retries: 5
     secrets:
-      - source: auth_secret
+      - source: ui_db_password
         uid: "10001"
-      - source: auth_microsoft_entra_id_id
+      - source: microsoft_entra_client_id
         uid: "10001"
-      - source: auth_microsoft_entra_id_secret
+      - source: microsoft_entra_client_secret
         uid: "10001"
-      - source: auth_microsoft_entra_id_issuer
-        uid: "10001"
-      - source: frontend_token
+      - source: microsoft_entra_tenant
         uid: "10001"
   caddy:
     image: caddy:2-alpine
     environment:
-      PUBLIC_ADDRESS: ${SCAMPLERS_PUBLIC_ADDRESS}
-      TLS_SETTINGS: ${SCAMPLERS_TLS_SETTINGS-""}
-      FRONTEND_HOST: scamplers-frontend
-      FRONTEND_PORT: *frontend_port
+      PUBLIC_URL: ${SCAMPLERS_PUBLIC_URL}
       API_HOST: scamplers-api
       API_PORT: *api_port
-      API_PATH: *api_path
+      UI_HOST: scamplers-ui
+      UI_PORT: *ui_port
     restart: always
     cap_add:
       - NET_ADMIN
@@ -113,7 +95,7 @@ services:
       - caddy-data:/data
       - caddy-config:/config
     depends_on:
-      scamplers-frontend:
+      scamplers-ui:
         condition: service_healthy
     secrets:
       - tls_certificate
@@ -124,27 +106,17 @@ volumes:
   caddy-data:
   caddy-config:
 secrets:
-  db_root_user:
-    environment: SCAMPLERS_DB_ROOT_USER
   db_root_password:
     environment: SCAMPLERS_DB_ROOT_PASSWORD
-  db_login_user_password:
-    environment: SCAMPLERS_DB_LOGIN_USER_PASSWORD
+  api_db_password:
+    environment: SCAMPLERS_API_DB_PASSWORD
   db_name:
     environment: SCAMPLERS_DB_NAME
-  auth_secret:
-    environment: SCAMPLERS_AUTH_SECRET
-  auth_microsoft_entra_id_id:
-    environment: SCAMPLERS_AUTH_MICROSOFT_ENTRA_ID_ID
-  auth_microsoft_entra_id_secret:
-    environment: SCAMPLERS_AUTH_MICROSOFT_ENTRA_ID_SECRET
-  auth_microsoft_entra_id_issuer:
-    environment: SCAMPLERS_AUTH_MICROSOFT_ENTRA_ID_ISSUER
-  frontend_token:
-    environment: SCAMPLERS_FRONTEND_TOKEN
-  seed_data:
-    file: ${SCAMPLERS_SEED_DATA}
-  tls_certificate:
-    file: ${SCAMPLERS_TLS_CERTIFICATE_PATH}
-  tls_key:
-    file: ${SCAMPLERS_TLS_KEY_PATH}
+  microsoft_entra_client_id:
+    environment: SCAMPLERS_MICROSOFT_ENTRA_CLIENT_ID
+  microsoft_entra_client_secret:
+    environment: SCAMPLERS_MICROSOFT_ENTRA_CLIENT_SECRET
+  microsoft_entra_tenant:
+    environment: SCAMPLERS_MICROSOFT_ENTRA_TENANT
+  initial_data:
+    file: ${SCAMPLERS_INITIAL_DATA_PATH}
