--- a/.env.compose.sample
+++ b/.env.compose.sample
@@ -6,6 +6,9 @@ SCAMPLERS_DB_ROOT_PASSWORD=""
 # The password scamplers-api uses to connect to the database (as the user "scamplers_api")
 SCAMPLERS_API_DB_PASSWORD=""
 
+# The database name
+SCAMPLERS_DB_NAME=""
+
 # The API key prefix is important to query the database for API keys
 SCAMPLERS_API_KEY_PREFIX_LENGTH=8
 
