--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,8 @@
 # This .env file can be used with `scripts/dev/start-api.sh` and `scripts/dev/start-ui.sh` to start the application
 # without containerization.
 
-# Password for the root database user
+# Username and password for the root database user
+SCAMPLERS_DB_ROOT_USER=""
 SCAMPLERS_DB_ROOT_PASSWORD=""
 
 # The password scamplers-api uses to connect to the database (as the user "scamplers_api")
