--- a/compose.yaml
+++ b/compose.yaml
@@ -1,14 +1,12 @@
 # Base compose file. Merge this with one of compose.dev.yaml of compose.prod.yaml to produce a running application
 services:
-  postgres:
+  &db_host postgres:
     image: postgres:18-alpine
     restart: always
     user: &db_root_user postgres
     secrets:
       - db_root_password
       - db_name
-    volumes:
-      - db-data:/var/lib/postgresql/18/docker
     environment:
       POSTGRES_USER: *db_root_user
       POSTGRES_PASSWORD_FILE: /run/secrets/db_root_password
@@ -21,67 +19,74 @@ services:
       interval: 5s
       timeout: 5s
       retries: 10
-  scamplers-api:
+  &api_host scamplers-api:
+    build:
+      args:
+        UID: &uid "10001"
     environment:
-      PORT: &api_port 8000
-      DB_HOST: postgres
+      DB_ROOT_USER: *db_root_user
+      DB_HOST: *db_host
       DB_PORT: *db_port
+      API_KEY_PREFIX_LENGTH: &api_key_prefix_length 8
+      PORT: &api_port 80
     expose:
       - *api_port
     secrets:
-      - source: db_root_user
-        uid: "10001"
       - source: db_root_password
-        uid: "10001"
-      - source: api_db_password
-        uid: "10001"
+        uid: *uid
+      - source: scamplers_api_db_password
+        uid: *uid
+      - source: scamplers_ui_db_password
+        uid: *uid
       - source: db_name
-        uid: "10001"
+        uid: *uid
       - source: initial_data
-        uid: "10001"
+        uid: *uid
     volumes:
       - logs:/logs
     depends_on:
       postgres:
         condition: service_healthy
     healthcheck:
-      test: curl http://localhost:8000/api/health || exit 1
+      test: curl http://localhost/api/health || exit 1
       interval: 5s
       start_period: 10s
       start_interval: 1s
       timeout: 5s
       retries: 10
-  scamplers-ui:
+  &ui_host scamplers-ui:
     environment:
-      BASE_URL: ${SCAMPLERS_PUBLIC_URL}
-      IN_DOCKER: true
-      PORT: &ui_port 8000
+      DB_HOST: *db_host
+      DB_PORT: *db_port
+      PUBLIC_URL: ${SCAMPLERS_PUBLIC_URL}
+      API_KEY_PREFIX_LENGTH: *api_key_prefix_length
+      PORT: &ui_port 80
     depends_on:
       scamplers-api:
         condition: service_healthy
     healthcheck:
-      test: curl http://localhost:8000/health || exit 1
+      test: curl http://localhost/health || exit 1
       interval: 5s
       start_period: 5s
       start_interval: 1s
       timeout: 1s
       retries: 5
     secrets:
-      - source: ui_db_password
-        uid: "10001"
+      - source: scamplers_ui_db_password
+        uid: *uid
       - source: microsoft_entra_client_id
-        uid: "10001"
+        uid: *uid
       - source: microsoft_entra_client_secret
-        uid: "10001"
+        uid: *uid
       - source: microsoft_entra_tenant
-        uid: "10001"
+        uid: *uid
   caddy:
     image: caddy:2-alpine
     environment:
       PUBLIC_URL: ${SCAMPLERS_PUBLIC_URL}
-      API_HOST: scamplers-api
+      API_HOST: *api_host
       API_PORT: *api_port
-      UI_HOST: scamplers-ui
+      UI_HOST: *ui_host
       UI_PORT: *ui_port
     restart: always
     cap_add:
@@ -97,19 +102,17 @@ services:
     depends_on:
       scamplers-ui:
         condition: service_healthy
-    secrets:
-      - tls_certificate
-      - tls_key
 volumes:
-  db-data:
   logs:
   caddy-data:
   caddy-config:
 secrets:
   db_root_password:
     environment: SCAMPLERS_DB_ROOT_PASSWORD
-  api_db_password:
+  scamplers_api_db_password:
     environment: SCAMPLERS_API_DB_PASSWORD
+  scamplers_ui_db_password:
+    environment: SCAMPLERS_UI_DB_PASSWORD
   db_name:
     environment: SCAMPLERS_DB_NAME
   microsoft_entra_client_id:
