--- a/scamplers-ui/package.json
+++ b/scamplers-ui/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "typedefs": "bunx json-schema-to-typescript --input ../json-schema/ --output src/lib/scamplers-models/",
     "dev": "bun run typedefs && vite dev",
-    "build": "bun run typedefs && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "prepare": "svelte-kit sync || echo ''",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -16,17 +16,17 @@
     "typescript": "^5"
   },
   "devDependencies": {
-    "@sveltejs/kit": "^2.43.2",
-    "@sveltejs/vite-plugin-svelte": "^6.2.0",
+    "@sveltejs/adapter-node": "^5.4.0",
+    "@sveltejs/kit": "^2.48.4",
+    "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@types/bun": "latest",
-    "svelte": "^5.39.5",
-    "svelte-adapter-bun": "^1.0.1",
-    "svelte-check": "^4.3.2",
-    "typescript": "^5.9.2",
-    "vite": "^7.1.7"
+    "svelte": "^5.43.6",
+    "svelte-check": "^4.3.4",
+    "typescript": "^5",
+    "vite": "^7.2.2"
   },
   "dependencies": {
-    "better-auth": "1.4.0-beta.15",
+    "better-auth": "1.4.0-beta.19",
     "qs": "^6.14.0"
   }
 }
