--- a/.env.sample
+++ b/.env.sample
@@ -8,7 +8,7 @@ SCAMPLERS_DB_ROOT_PASSWORD=""
 # The password scamplers-api uses to connect to the database (as the user "scamplers_api")
 SCAMPLERS_API_DB_PASSWORD=""
 
-# Where scamplers-api will serve. Default values shown
+# Where scamplers-api will serve
 SCAMPLERS_API_HOST="localhost"
 SCAMPLERS_API_PORT=8000
 
