it finally works wooohooo

--- a/.env.sample
+++ b/.env.sample
@@ -27,4 +27,4 @@ SCAMPLERS_MICROSOFT_ENTRA_TENANT=""
 SCAMPLERS_UI_DB_PASSWORD=""
 
 # Path from which to read initial data that scamplers-api will insert into db
-SCAMPLERS_INITIAL_DATA_PATH="initial-data.sample.json"
+SCAMPLERS_INITIAL_DATA_PATH="initial_data.sample.json"
