--- a/caddy/Caddyfile
+++ b/caddy/Caddyfile
@@ -1,6 +1,6 @@
-{$PUBLIC_ADDRESS} {
+{$PUBLIC_URL} {
     {$TLS_SETTINGS}
     reverse_proxy api/auth/* {$UI_HOST}:{$UI_PORT}
     reverse_proxy api/* {$API_HOST}:{$API_PORT}
-	reverse_proxy {$UI_HOST}:{$UI_PORT}
+    reverse_proxy /* {$UI_HOST}:{$UI_PORT}
 }
